# daedalus-cli

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  README_zh.md  docker-compose.yml
.github/workflows/: release.yml
sql/: init.sql
src/: lib.rs  main.rs
src/config/: mod.rs
src/db/: mod.rs
src/tui/: mod.rs
