[package]
name = "daedalus-cli"
version = "0.1.0"
edition = "2024"
authors = ["Zephyruston <1351688749@qq.com>"]
license = "MIT"
description = "A Rust-based command-line interface tool for PostgreSQL database management and exploration with an intuitive terminal user interface."
homepage = "https://github.com/Zephyruston/daedalus-cli"
repository = "https://github.com/Zephyruston/daedalus-cli"
readme = "README.md"
keywords = ["database", "cli", "tui", "postgres", "postgresql"]
categories = ["command-line-utilities", "database"]
exclude = ["/.git", "/target"]

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = "0.7.14"
ratatui = "0.29.0"
crossterm = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
config = "0.15.18"
rand = "0.9.2"
base64 = "0.22.1"
clap = { version = "4.5.48", features = ["derive"] }
clap_complete = "4.5.58"
anyhow = "1.0.100"
aes-gcm = "0.10.3"
aead = "0.5.2"

[dev-dependencies]
tempdir = "0.3.7"

[[bin]]
name = "daedalus-cli"
path = "src/main.rs"
