[package]
name = "daedalus-cli"
version = "0.1.3"
edition = "2024"
authors = ["Zephyruston <1351688749@qq.com>"]
license = "MIT"
description = "A Rust-based command-line interface tool for PostgreSQL database management and exploration with an intuitive terminal user interface."
homepage = "https://github.com/Zephyruston/daedalus-cli"
repository = "https://github.com/Zephyruston/daedalus-cli"
readme = "README.md"
keywords = ["database", "cli", "tui", "postgres", "postgresql"]
categories = ["command-line-utilities", "database"]
exclude = ["/.git", "/target"]

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = "0.7.15"
ratatui = "0.29.0"
crossterm = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
config = "0.15.18"
rand = "0.9.2"
base64 = "0.22.1"
clap = { version = "4.5.49", features = ["derive"] }
clap_complete = "4.5.59"
anyhow = "1.0.100"
aes-gcm = "0.10.3"
aead = "0.5.2"
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3.23.0"

[[bin]]
name = "daedalus-cli"
path = "src/main.rs"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
